<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoS_Salgados</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cardapio">Cardapio</string>
    <string name="login">Digite o usuário</string>
    <string name="senha">Digite a Senha</string>
    <string name="bntLogin">Entrar</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_principal">Principal</string>
    <string name="userLogin">Bem Vindo</string>
    <string name="pedido">Pedido</string>
    <string name="cardapio">Gerenciar Cardapio</string>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="atendente">"Atentendente: "</string>
    <string name="HR_Pedido">"Hora do pedido: "</string>
    <string name="idPedido">"Número do pedido: "</string>
    <string name="AddItem">ADD +</string>
    <string name="valor">Valor:</string>
    <string name="bntCancel">Cancelar</string>
    <string name="btnEnviar">Enviar</string>
    <string name="title_activity_add_item">AddItem</string>
    <string name="exibirPedidos">Pedidos</string>
    <string name="about">Sobre o produto</string>
    <string name="suporte">Suporte</string>
    <string name="txt1">ADD</string>
    <string name="txt02">CARDAPIO</string>
    <string name="title_activity_item_cardapio">ItemCardapioActivity</string>
    <string name="txt2">Salvar</string>
    <string name="txtv1">Nome</string>
    <string name="txtv2">Valor</string>
    <string name="txtv3">Descrição</string>

</resources>
