<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/idPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idPedido" />

    <TextView
        android:id="@+id/txtAtendente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atendente" />

    <TextView
        android:id="@+id/txtHrPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HR_Pedido" />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor" />

    <Button
        android:id="@+id/btnAdd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/AddItem" />

    <ListView
        android:id="@+id/cardapioList"
        android:layout_width="wrap_content"
        android:layout_height="230dp" >

    </ListView>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/bntCancel" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/btnEnviar" />

    </LinearLayout>
   
</LinearLayout>